--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- ============================== Remix Icon Link ============================== -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- ============================== CSS Link ===================================== -->
+    <link rel="stylesheet" href="CSS/slick.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -686,12 +687,57 @@
       <!-- ===============================> Middle Body Section Start <================================= -->
 
       <section class="middle">
-        
+
+            <div class="slick_slider">
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/profile.jpeg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/user image.jpg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/girl03.jpg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/boy03.jpg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/boy04.jpg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/girl01.jpg" alt="slick slider img">
+                    </div>
+                </div>
+                <div class="slider_item">
+                    <div class="item">
+                        <img src="img/girl02.jpg" alt="slick slider img">
+                    </div>
+                </div>
+              </div>
+
       </section>
     <!-- =============================> Middle Body Section End <===================================== -->
 
 
-    <script src="main.js"></script>
+
+
+
+
+    <!-- ======================> Java Script Link <============================ -->
+    <script src="JS/code.jquery.com_jquery-3.7.1.min.js"></script>
+    <script src="JS/slick.min.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
 
